--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -153,7 +153,33 @@
 	\end{center}
 \end{figure}
 
+\begin{figure}[!ht]
+\begin{center}
+	\includegraphics[width = 0.9\linewidth]{"figures/Diag--Encounter_prob"}
+	\label{fig:S12}
+	\caption{Model diagnostics output showing correlation between the
+		predicted encounter probability and the data}
+	\end{center}
+\end{figure}
 
+\begin{figure}[!ht]
+\begin{center}
+	\includegraphics[width = 0.9\linewidth]{"figures/Q-Q_plot"}
+	\label{fig:S13}
+	\caption{Model diagnostics output showing the Q-Q plot for the positive
+	catch rates}
+	\end{center}
+\end{figure}
+
+\begin{figure}[!ht]
+\begin{center}
+	\includegraphics[width =0.9\linewidth]{"figures/RealativeIndexVRelativeAssessSSB"}
+	\label{fig:S14}
+	\caption{Comparison between the standardised index from the VAST
+		output and the standardised spawning stock biomass (SSB) from
+		the assessments for cod, haddock and whiting}
+	\end{center}
+\end{figure}
 
 %% Tables %%
 \begin{table}[!ht]
