--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -49,7 +49,7 @@ major goal for fisheries sustainability.
 A potential mechanism for decoupling exploitation is spatial targeting, but this remains
 challenging due to complex fishery dynamics and a lack of understanding of community dynamics at
 fine spatial and temporal scales.  We develop a joint species distribution model to understand how spatial
-community and fishery dynamics interact to determine species composition in the highly mixed fisheries of the Celtic Sea. 
+community and fishery dynamics interact to determine species and size composition in the highly mixed fisheries of the Celtic Sea. 
 
 Clear common patterns for spatial distribution patterns emerge for three
 species groups commonly targeted (roundfish(gadoids??), flatfish and shelf species) and,
@@ -142,18 +142,15 @@ catches in mixed fisheries.
 We present a framework for analysing how far spatio-temporal avoidance can contribute
 towards mitigating imbalances in quota in mixed fisheries. We use fisheries-independent survey data to characterise the spatio-temporal dynamics of key
 components of a fish community by employing a geostatistical Vector
-Autoregressive Spatio-temporal model (VAST). VAST includes i) a factor analysis
+Autoregressive Spatio-temporal model (VAST). We implement a factor analysis
 decomposition to describe trends in spatio-temporal dynamics of the different
-species as a function of \textit{n} latent variables\cite{Thorson2015} to
-identify community dynamics and drivers common among species groups. This
-allows for inference of the distribution and density of poorly sampled species
-through association with the modelled factors. In addition, VAST ii) separately
-models spatio-temporal encounter probability and catch rates to allow
+species as a function of \textit{n} latent variables \cite{Thorson2015} to
+identify community dynamics and drivers common among species groups. Of particular importance for mixed fisheries is the ability to separate species by underlying factors, which can then be investigated for what spatio-temporal separation they pertain to. We separately model spatio-temporal encounter probability and catch rates to allow
 identification of differences in associations for distribution of the species
-groups and densities upon encounter \cite{Thorson2015a}, it employs iii)
+groups and densities upon encounter \cite{Thorson2015a}, by employing 
 Gaussian Markov Random Fields (GMRFs) to capture spatial and temporal
 dependence within and among species groups for both encounter probability and
-catch rates \cite{Thorson2013}, and iv) is set in a mixed modelling framework
+catch rates \cite{Thorson2013}. VAST is set in a mixed modelling framework
 to allow estimation of fixed effects to account for systematic differences
 driving encounter and catches, such as survey catch rate differences while
 random effects capture the spatio-temporal dynamics of the fish community.
@@ -162,12 +159,11 @@ random effects capture the spatio-temporal dynamics of the fish community.
 
 \subsection{Dynamics of Celtic Sea fisheries}
 
-We use the fisheries in the Celtic Sea as a case study. The Celtic Sea is a
+We use the highly mixed demersal fisheries of the Celtic Sea as a case study. The Celtic Sea is a
 temperate sea where a large number of species make up the commercial catches.
 Fisheries are spatially and temporally complex with mixed fisheries undertaken
-by several nations using different gear types \cite{Ellis2000, Gerritsen2012}.
-(MORE SPECIFIC - details of number of species in typical landings, key
-species).
+by several nations using different gear types \cite{Ellis2000, Gerritsen2012}. Close to 150 species have been identified in the 
+  commercial catches of the Celtic Sea, with approximately 30 species dominating the catch [Mateo Maria, Pawlowski Lionel, Robert Marianne (2017). Highly mixed fisheries: fine-scale spatial patterns in retained catches of French fisheries in the Celtic Sea . ICES Journal of Marine Science, 74(1), 91-101.].
 
 We parametrise our spatio-temporal model using catch data from seven fisheries
 independent surveys undertaken in the Celtic Sea over the period 1990 - 2015
@@ -179,15 +175,15 @@ Atlantic whiting (\textit{Merlangius merlangus}), European Hake
 megrim (\textit{Lepidorhombus whiffiagonis}), European Plaice
 (\textit{Pleuronectes platessa}) and Common Sole (\textit{Solea solea}). These
 species make up \textgreater 60 \% of landings by towed fishing gears for the
-area (average 2011 - 2015, STECF data). Each species was separated into
+area (average 2011 - 2015, STECF data [INCLUDE REF]). Each species was separated into
 juvenile and adult size classes based on their legal minimum conservation
 reference size (Table S2).
 
-We analyse the data to understand how the different associations among
+We analyse the data to understand how the different associations among emergent
 species-groups (combination of species and size class) and their potential
 drivers affect catch compositions in mixed fisheries. We consider how these
 have changed over time, and the implications for mixed fisheries in managing
-catches of quota species under the EU's landings obligation.
+catches of quota species under the EU landing obligation.
 
 [223 words]
 
@@ -195,20 +191,20 @@ catches of quota species under the EU's landings obligation.
 dynamic factor analysis decomposes the dominant spatial patterns driving
 differences in encounter probability and abundance. Figure 1 shows the first
 three factors for (a) average spatial encounter probability and (b) average
-density. The first three factors account of 83.7 \% of the variance in
+density [AVOID SENTENCES SAYING WHAT THE FIGURE/TABLE IS, USE THE SPACE TO SAY SOMETHING ABOUT THE RESULTS - CAPTION DOES THE REST]. The first three factors account of 83.7 \% of the variance in
 encounter probability and 69 \% of the variance in density, respectively. A
 clear spatial pattern can been seen both for encounter probability and density,
 with a positive association with the first factor in the inshore North Easterly
 part of the Celtic Sea into the Bristol Channel and Western English Channel,
-moving to a negative association offshore in the south-westerly waters. On the
+moving to a negative association offshore in the south-westerly waters (Figure 1). On the
 second factor a North / South split can be seen for encounter probability at
-approximately the 49$^{\circ}$ N while density is more driven by a positive
+approximately 49$^{\circ}$ N while density is more driven by a positive
 association in the deeper westerly waters.  The opposite is evident on the
 third factor, with a positive association with the Easterly waters for
 encounter probability and negative with the westerly waters, while density is
 driven by a North / South split.
 
-The first factor was highly correlated with log(depth) for both encounter
+[NEXT TWO PARAGRAPHS CAN BE MOVED LOWER OR SUPPLEMENTARY. DISCUSS HERE TO WHICH SPECIES WERE ASSOCIATED WITH WHICH FACTORS INTRODUCED ABOVE, I.E., FIGURE 2.]In a preliminary investigation of the main observed covariates influencing the factors, the first factor was highly correlated with log(depth) for both encounter
 probability (-0.85, CI = -0.88 to -0.81; Figure S1) and density (-0.71, CI =
 -0.77 to -0.65; Figure S2). A random forest classification tree assigned 80 \%
 of the variance in the first factor for encounter probability to depth and
@@ -235,32 +231,30 @@ analysis can adequately characterise these influences.
 	dynamics}
 
 While there are clear patterns in the factor coefficients describing spatial
-differences average encounter probability and density, the inter-annual
+differences in average encounter probability and density (Figure 1), the inter-annual
 differences in factor coefficients show less structure (Figures S4, S5).
 Temperature is often included as a covariate in species distribution models,
 but was found not to contribute to the variance in the factor coefficients
 (Figure S6, correlations for either encounter probability or density $\sim$ 0).
 
 While spatio-temporal factor coefficients did not show consistent trends from
-year to year, among species groups there were clear relationships. Figure 2a
-shows that the same factors appear to drive spatio-temporal distributions of
+year to year, among species groups there were clear relationships (Figure 2). The same factors appear to drive spatio-temporal distributions of
 megrim, anglerfish species and hake (the deeper water species, species grouping
-negatively associated with the second axes) on the one hand and the roundfish
-and flatfish on the other. For spatio-temporal density (Figure 2b) cod, haddock
+negatively associated with the second axes of Figure 2a) and the roundfish
+and flatfish (species grouping more positively associated with the second axes of Figure 2a). For spatio-temporal density (Figure 2b) cod, haddock
 and whiting (the roundfish species) are separated from plaice, sole (the
 flatfish) and deeper water species. As such, higher catches of a species within
 a group would be expected when catching another species within that group. This
 suggests that a common environmental driver is influencing the distributions of
-the species groups, and that driver is individual to or affects groups
-differently.  
+the species groups, and that driver differentially affects the species groups.  
 
 [178 words]
 
-\subsection{Correlations show three distinct species-group associations}
+\subsection{Spatial correlations show three distinct species-group associations}
 Pearson correlation coefficients for the modelled average spatial encounter
 probability (Figure 3a) show clear strong associations between adult and
 juvenile size classes for all species (\textgreater 0.75 for all species except
-Hake, 0.56).  Among species groups, hierarchical clustering identified the same
+hake, 0.56).  Among species groups, hierarchical clustering identified the same
 three common groups as above, with roundfish (cod, haddock, whiting) closely
 grouped in their association, with correlations for adult cod with adult
 haddock and adult whiting of 0.73 and 0.5 respectively, while adult haddock
@@ -268,10 +262,8 @@ with adult whiting was 0.63. Flatfish (plaice and sole) are also strongly
 correlated with adult plaice and sole having a coefficient of 0.75.  The final
 group are principally the species found in the deeper waters (hake, megrim and
 both anglerfish species) with the megrim strongly associated with the budegassa
-anglerfish species (0.88). Negative relationships were found between plaice and
-sole and the monkfish species (-0.27, -0.26 for the adult size class with
-budegassa adults respectively) and hake (-0.33, -0.37) indicating spatial
-separation in distributions.
+anglerfish species (0.88). Negative relationships were found between plaice-sole and the monkfish species (-0.27, -0.26 for the adult size class with
+budegassa adults respectively) and hake (-0.33, -0.37) indicating spatial separation in distributions.
 
 Correlation coefficients for the average density (Figure 3b) show less
 significant positive or negative relationships among species groups then for
@@ -289,7 +281,7 @@ the other successfully.
 
 In addition to the average spatial correlations, we also estimate
 spatio-temporal correlations.  The spatial correlations (representing the
-average correlations across all years) from the population correlations are
+average correlations across all years) from the population correlations [DEFINE WHAT IS MEANT BY POPULATION CORRELATION] are
 linearly associated with the spatio-temporal population correlations
 (representing how correlations change from year to year), indicating generally
 predictable relationships between species groups from one year to the next,
@@ -316,13 +308,12 @@ The analysis shows the interdependence within species groups (roundfish,
 flatfish and deeper water species) where catching one species within the group
 indicates a high probability of catching the other species, which has important
 implications for how spatial avoidance can be used to support implementation of
-the EU's landings obligation. If mixed fisheries are to maximise productivity,
-decoupling catches of species between and within the groups will be key.
-Figure 4 shows the difference in spatial distribution within a group for each
-of the species groupings for a single year (2015). 
+the EU's landings obligation. If production from mixed fisheries is to be maximised,
+decoupling catches of species between and within the groups will be key. For example, asking where he maximal separation in the densities of two coupled species is likely to occur? To address this requirement, we map the difference in spatial distribution within a group for each
+of the species groupings for a single year (2015) (Figure 4). 
 
 Figure 4a indicates that cod had a more North-westerly distribution than
-haddock, while cod was more westerly distribution than whiting roughly
+haddock, while cod was more westerly distributed than whiting roughly
 delineated by the 7$^{\circ}$ W line. Whiting appeared particularly
 concentrated in an area between 51 and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$
 W, which can be seen by comparing the whiting distribution with both cod
@@ -340,9 +331,9 @@ the coast of France.
 Figure 4h shows the predicted catch distribution from a "typical" Otter trawl
 gear and Beam trawl gear fishing at three different locations. As can be seen,
 both the gear selectivity and area fished play important contributions to the
-catch compositions; in the inshore area (66) plaice and sole are the two main
-species in catch reflecting their distribution and abundance, though the Otter
-trawl gear catches a greater proportion of plaice to sole than the Beam trawl.
+catch compositions; in the inshore area (66 [WHY NOT LOCATION `A'?]) plaice and sole are the two main
+species in catch reflecting their distribution and abundance, though the otter
+trawl gear catches a greater proportion of plaice to sole than the beam trawl.
 The area between the UK and Ireland (79) has a greater contribution of whiting,
 haddock, cod, hake and anglerfishes in the catch with the Otter trawl catching
 a greater proportion of the roundfish, haddock, whiting and cod. The offshore
@@ -352,7 +343,7 @@ of megrim. Megrim dominates the catch for both gears in area 216, reflecting
 its relative abundance in the area.
 
 [[WORK IN PROGRESS, NOT SURE WHETHER TO KEEP OR DEVELOP...	
-
+[SUGGEST WE JUST CITE THE REFERENCE TO THIS IN THE DISCUSSION PAUL AS WE NEED TO KEEP THE MESSAGE SIMPLE - `SPATIOTEMPORAL COMPLEXITY REDUCED']
 Figure 5 shows the joint production function for the entire spatial domain,
 giving the global production sets for the years 2011 - 2015. It gives the space
 in which vessels have to operate where they can change the relative composition
@@ -370,8 +361,7 @@ OBJECTIVELY...?]]
 
 \subsection{Application of framework to support implementation landing
 	obligation in mixed fisheries}
-Here we describe a framework for analysing mixed fisheries interactions taking
-account of technical, spatial and community dynamics. In application to the
+In application to the
 Celtic Sea we have identified spatial separation of three distinct species
 groupings (roundfish, flatfish and deeper water species) while showing that
 only subtle differences in distributions within species groups. The differences
@@ -384,7 +374,7 @@ offshore locations (e.g. site 216) would likely yield greater catches of megrim
 and anglerfishes. Such changes in spatial fishing patterns are likely to play
 an important role in supporting implementation of the landings obligation.
 
-More challenging is within groups spatial separation due to significant overlap
+More challenging is within-group spatial separation due to significant overlap
 in spatial distributions for the species, driven by common environmental
 factors. Subtle changes may yield some benefit in changing catch composition,
 yet the outcome is likely to be much more difficult to predict. For example,
@@ -397,9 +387,8 @@ A role that science can play in supporting effectiveness of spatio-temporal
 avoidance could be to provide probabilistic advice on likely hotspots for high
 probability of species occurrence and high species density which can inform
 fishing decisions. Such advice could be based also on data obtained directly
-from commercial fishing vessels at a higher temporal resolution, providing real
-time forecasts to inform fishing choices that also captures seasonal
-differences in distributions.
+from commercial fishing vessels at a higher temporal resolution, providing real-time forecasts to inform fishing choices that also captures seasonal
+differences in distributions. The framework we develop here could be extended to include commercial data and real-time updates.
 
 An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieving catch balancing in fisheries.
